--- a/index.html
+++ b/index.html
@@ -3,5 +3,22 @@
 
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
         <title>My New Website</title>
     </head>
+
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li id="git"> Github</li>
+                    <li id="portfolio"> Portfolio</li> 
+                    <li id="contact"> Contact</li>
+                </ul>
+            </nav>
+        </header>
+
+        <section>
+          <h1>My New Website</h1>  
+        </section>
+    </body>
